--- a/div.html
+++ b/div.html
@@ -1,23 +1,12 @@
 <!DOCTYPE html>
-<html lang="de">
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
 
-    <head>
-        <meta charset="utf-8">
-        <title>DIV</title>
-    </head>
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
 
-    <body>
-
-        <div>
-            <h1>Überschrift</h1>
-            <p>Dies ist ein wenig text.</p>
-
-        </div>
-        <br>
-        <div>
-
-        </div>
-
-    </body>
-
+</body>
 </html>
