--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
+<html lang="de">
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+    <head>
+        <meta charset="utf-8">
+        <title>DIV</title>
+        <link rel="stylesheet" type="text/css" href="div.css">
+    </head>
 
-</body>
+    <body>
+
+        <div>
+            <h1>Überschrift</h1>
+            <p>Dies ist ein wenig text.</p>
+
+        </div>
+        <br>
+        <div>
+
+        </div>
+
+    </body>
+
 </html>
