--- a/plan.html
+++ b/plan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meine Webseite</title>
+    <title>Mein Plan</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,6 +19,10 @@
             <li><a href="contact.html">Kontakt</a></li>
         </ul>
     </nav>
+    <section>
+        <h1>Mein Plan</h1>
+        <p>Hier ist ein wenig Text über meinen Plan.</p>
+    </section>
 
     <script>
         function toggleMenu() {
