--- a/about.html
+++ b/about.html
@@ -14,14 +14,16 @@
             <div class="bar"></div>
         </div>
         <ul id="menu">
-            <li><a href="about.html">Über mich</a></li>
-            <li><a href="plan.html">Mein Plan</a></li>
-            <li><a href="contact.html">Kontakt</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="plan.html">My Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <section>
-        <h1>Über mich</h1>
-        <p>Hier ist ein wenig Text über mich.</p>
+        <h1>About Me</h1>
+        <p>Hello, my name is Luka and I have a passion for Computer science. Since childhood I have been fascinated of computers. I used to help my father in building our own pc. Which helped deepened my interest.
+In my free time I enjoy learning new stuff about programming. For example, I have programmed a calculator. Another interest of mine is web development. I regularly watch online videos to create and improve my own website. My favorite subject in school is English, which helps me better understand and utilize English resources.
+</p>
     </section>
 
     <script>
