--- a/contact.html
+++ b/contact.html
@@ -14,14 +14,16 @@
             <div class="bar"></div>
         </div>
         <ul id="menu">
-            <li><a href="about.html">Über mich</a></li>
-            <li><a href="plan.html">Mein Plan</a></li>
-            <li><a href="contact.html">Kontakt</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="projects.html">My Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <section>
-        <h1>Kontakt</h1>
-        <p>Hier ist ein wenig Text, wie man mich kontaktieren kann.</p>
+        <h1>Contact</h1>
+        <p>If you have any questions or would like to know more about me, feel free to contact me at:
+grujicic.luka@protonmail.com
+</p>
     </section>
 
     <script>
