--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meine Webseite</title>
+    <title>My Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,9 +14,9 @@
             <div class="bar"></div>
         </div>
         <ul id="menu">
-            <li><a href="about.html">Über mich</a></li>
-            <li><a href="plan.html">Mein Plan</a></li>
-            <li><a href="contact.html">Kontakt</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="projects.html">My Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
