Update and rename plan.html to projects.html

--- a/projects.html
+++ b/projects.html
@@ -14,14 +14,24 @@
             <div class="bar"></div>
         </div>
         <ul id="menu">
-            <li><a href="about.html">Über mich</a></li>
-            <li><a href="plan.html">Mein Plan</a></li>
-            <li><a href="contact.html">Kontakt</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="projects.html">My Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <section>
-        <h1>Mein Plan</h1>
-        <p>Hier ist ein wenig Text über meinen Plan.</p>
+        <h1>My Projects</h1>
+        <p>So far, I have made 3 things, and I am continuing to make more.
+
+Calculator in C# and WPF
+This was my first proper program. It helped me solidify the fundamentals, deepen my understanding of logical processes and user interfaces.
+
+String of light in C# and WPF
+For this one, I developed a programmable string of lights can can display various patterns and speeds.
+
+Website in HTML and CSS
+The idea for this website is to show my interest in computer science as well as help me to understand web development better.
+</p>
     </section>
 
     <script>
