--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Über mich</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
         </div>
         <ul id="menu">
             <li><a href="about.html">About Me</a></li>
-            <li><a href="plan.html">My Projects</a></li>
+            <li><a href="projects.html">My Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
