--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
             <div class="bar"></div>
         </div>
         <ul id="menu">
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
             <li><a href="projects.html">My Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -21,9 +22,10 @@
     </nav>
     <section>
         <h1>About Me</h1>
-        <p>Hello, my name is Luka and I have a passion for Computer science. Since childhood I have been fascinated of computers. I used to help my father in building our own pc. Which helped deepened my interest.
-In my free time I enjoy learning new stuff about programming. For example, I have programmed a calculator. Another interest of mine is web development. I regularly watch online videos to create and improve my own website. My favorite subject in school is English, which helps me better understand and utilize English resources.
-</p>
+        <p> 
+            Hello, my name is Luka and I have a passion for Computer science. Since childhood I have been fascinated of computers. I used to help my father in building our own pc. Which helped deepened my interest.
+            In my free time I enjoy learning new stuff about programming. For example, I have programmed a calculator. Another interest of mine is web development. I regularly watch online videos to create and improve my own website. My favorite subject in school is English, which helps me better understand and utilize English resources.
+        </p>
     </section>
 
     <script>
