--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,7 @@
             <div class="bar"></div>
         </div>
         <ul id="menu">
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
             <li><a href="projects.html">My Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -21,17 +22,19 @@
     </nav>
     <section>
         <h1>My Projects</h1>
-        <p>So far, I have made 3 things, and I am continuing to make more.
-
-Calculator in C# and WPF
-This was my first proper program. It helped me solidify the fundamentals, deepen my understanding of logical processes and user interfaces.
-
-String of light in C# and WPF
-For this one, I developed a programmable string of lights can can display various patterns and speeds.
-
-Website in HTML and CSS
-The idea for this website is to show my interest in computer science as well as help me to understand web development better.
-</p>
+        <p>So far, I have made various programms, and I am continuing to make more. <br>
+            <br>
+            Calculator in C# and WPF<br>
+            This was my first proper program. It helped me solidify the fundamentals, deepen my understanding of logical processes and user interfaces.
+            <br>
+            <br>
+            String of light in C# and WPF<br>
+            For this one, I developed a programmable string of lights that can display various patterns and speeds.
+            <br>
+            <br>
+            Website in HTML and CSS<br>
+            The idea for this website is to show my interest in computer science as well as help me understand web development better.
+        </p>
     </section>
 
     <script>
