--- a/contact.html
+++ b/contact.html
@@ -14,16 +14,19 @@
             <div class="bar"></div>
         </div>
         <ul id="menu">
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
             <li><a href="projects.html">My Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+
     <section>
         <h1>Contact</h1>
-        <p>If you have any questions or would like to know more about me, feel free to contact me at:
-grujicic.luka@protonmail.com
-</p>
+        <p>
+            If you have any questions or would like to know more about me, feel free to contact me at: <br><br>
+            grujicic.luka@protonmail.com
+        </p>
     </section>
 
     <script>
