--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
             <div class="bar"></div>
         </div>
         <ul id="menu">
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
             <li><a href="projects.html">My Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+
+    <div class="button-container">
+        <a href="about.html" class="button">About Me</a>
+        <a href="projects.html" class="button">My Projects</a>
+        <a href="contact.html" class="button">Contact</a>
+    </div>
 
     <script>
         function toggleMenu() {
