--- a/index.html
+++ b/index.html
@@ -6,18 +6,13 @@
     <title>My Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="home-active">
     <nav>
-        <div class="menu-icon" onclick="toggleMenu()">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-        </div>
-        <ul id="menu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="projects.html">My Projects</a></li>
-            <li><a href="contact.html">Contact</a></li>
+        <ul class="nav-links">
+            <li><a href="index.html" class="home-button">Home</a></li>
+            <li><a href="about.html" class="about-button">About Me</a></li>
+            <li><a href="projects.html" class="projects-button">My Projects</a></li>
+            <li><a href="contact.html" class="contact-button">Contact</a></li>
         </ul>
     </nav>
 
@@ -26,24 +21,5 @@
         <a href="projects.html" class="button">My Projects</a>
         <a href="contact.html" class="button">Contact</a>
     </div>
-
-    <script>
-        function toggleMenu() {
-            var menu = document.getElementById('menu');
-            if (menu.style.left === '0px') {
-                menu.style.left = '-250px';
-            } else {
-                menu.style.left = '0px';
-            }
-        }
-
-        document.addEventListener('click', function(event) {
-            var menu = document.getElementById('menu');
-            var menuIcon = document.querySelector('.menu-icon');
-            if (!menu.contains(event.target) && !menuIcon.contains(event.target)) {
-                menu.style.left = '-250px';
-            }
-        });
-    </script>
 </body>
 </html>
