--- a/projects.html
+++ b/projects.html
@@ -3,26 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My projects</title>
+    <title>My Projects</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="projects-active">
     <nav>
-        <div class="menu-icon" onclick="toggleMenu()">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-        </div>
-        <ul id="menu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="projects.html">My Projects</a></li>
-            <li><a href="contact.html">Contact</a></li>
+        <ul class="nav-links">
+            <li><a href="index.html" class="home-button">Home</a></li>
+            <li><a href="about.html" class="about-button">About Me</a></li>
+            <li><a href="projects.html" class="projects-button">My Projects</a></li>
+            <li><a href="contact.html" class="contact-button">Contact</a></li>
         </ul>
     </nav>
     <section>
         <h1>My Projects</h1>
-        <p>So far, I have made various programms, and I am continuing to make more. <br>
+        <p>So far, I have made various programs, and I am continuing to make more. <br>
             <br>
             Calculator in C# and WPF<br>
             This was my first proper program. It helped me solidify the fundamentals, deepen my understanding of logical processes and user interfaces.
@@ -36,24 +31,5 @@
             The idea for this website is to show my interest in computer science as well as help me understand web development better.
         </p>
     </section>
-
-    <script>
-        function toggleMenu() {
-            var menu = document.getElementById('menu');
-            if (menu.style.left === '0px') {
-                menu.style.left = '-250px';
-            } else {
-                menu.style.left = '0px';
-            }
-        }
-
-        document.addEventListener('click', function(event) {
-            var menu = document.getElementById('menu');
-            var menuIcon = document.querySelector('.menu-icon');
-            if (!menu.contains(event.target) && !menuIcon.contains(event.target)) {
-                menu.style.left = '-250px';
-            }
-        });
-    </script>
 </body>
 </html>
