--- a/projects.html
+++ b/projects.html
@@ -23,8 +23,16 @@
             This was my first proper program. It helped me solidify the fundamentals, deepen my understanding of logical processes and user interfaces.
             <br>
             <br>
+            <img id="rechner1" src=rechner-1.png alt="rechner1"">
+            <img id="rechner1" src=rechner-2.png alt="rechner2"">
+            <br>
+            <br>
             String of light in C# and WPF<br>
             For this one, I developed a programmable string of lights that can display various patterns and speeds.
+            <br>
+            <br>
+            <img id="rechner1" src=lichterkette-1.png alt="lichterkette1"">
+            <img id="rechner1" src=lichterkette-2.png alt="lichterkette2"">
             <br>
             <br>
             Website in HTML and CSS<br>
