--- a/projects.html
+++ b/projects.html
@@ -17,26 +17,37 @@
     </nav>
     <section>
         <h1>My Projects</h1>
-        <p>So far, I have made various programs, and I am continuing to make more. <br>
-            <br>
+        <p> So far, I have made various programs, and I am continuing to make more.
+            Here are some of the projects I have worked on:<br>
+        <br>
             Calculator in C# and WPF<br>
-            This was my first proper program. It helped me solidify the fundamentals, deepen my understanding of logical processes and user interfaces.
-            <br>
-            <br>
-            <img id="rechner1" src=rechner-1.png alt="rechner1"">
-            <img id="rechner1" src=rechner-2.png alt="rechner2"">
-            <br>
-            <br>
+            This was my first proper program, and I initially followed a tutorial to get started. However , I also added a few features
+            myself to give it more funcionality. It helped me solidify the fundamentals of programming, deepen my understanding of 
+            logical processes and user interfaces.
+        <br>
+        <br>
+            <img id="rechner1" src=rechner-1.png alt="rechner2"">
+        <br>
+        <br>
             String of light in C# and WPF<br>
-            For this one, I developed a programmable string of lights that can display various patterns and speeds.
-            <br>
-            <br>
-            <img id="rechner1" src=lichterkette-1.png alt="lichterkette1"">
-            <img id="rechner1" src=lichterkette-2.png alt="lichterkette2"">
-            <br>
-            <br>
+            After gaining some experience with the calculator project, I wanted to make my own program without following a tutorial from scratch.
+            I made a programmable string of light where you can choose a few colors of your own and change the speed of the pattern.
+            This enabled me to explore different topics such as timing and dynamic visual effects.
+         <br>
+         <br>
+            <img id="rechner1" src=lichterkette-1.png alt="lichterkette2"">
+        <br>
+        <br>
             Website in HTML and CSS<br>
-            The idea for this website is to show my interest in computer science as well as help me understand web development better.
+            The idea for this website is to showcase my interest in computer science and help me understand web development better.
+            I only just started with my journey and wanted to learn other programming languages, so i started following an
+            HTML and CSS course on Udemy. I will learn more about website design and make sure that it looks good on various devices.
+        <br>
+        <br>
+            Future Goals<br>
+            One of my major goals is to develop an Android app with a user friendly design and good functionality.
+            I want to create an equalizer app because I wasn't able to find a good enough one with the functionality i want.
+            This will help me understand mobile development, audio processing and designing a friendly user interface.
         </p>
     </section>
 </body>
