--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
             logical processes and user interfaces.
         <br>
         <br>
-            <img id="rechner1" src=rechner-1.png alt="rechner2"">
+            <img id="rechner1" src=rechner-1.png alt="rechner"">
         <br>
         <br>
             String of light in C# and WPF<br>
@@ -35,7 +35,7 @@
             This enabled me to explore different topics such as timing and dynamic visual effects.
          <br>
          <br>
-            <img id="rechner1" src=lichterkette-1.png alt="lichterkette2"">
+            <img id="rechner1" src=lichterkette-1.png alt="lichterkette"">
         <br>
         <br>
             Website in HTML and CSS<br>
